--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lsyzwmworkcore"
-version = "0.0.1"
+version = "0.0.2"
 description = "lsyzwm-work-core - 简化work任务分发与执行的核心库"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {file = "LICENSE"}
+license = "MIT"
 authors = [
     {name = "9kl"}
 ]
